src/app/public/summary/summary-result-page/result/result-item/result-item.component.scss
.result-item {
  background: #ffffff;
  margin-bottom: 20px;
  padding: 15px;
  border-radius: 15px;
  border-top-left-radius: 0px;
  border-top: 4px solid #003b80;

  box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.75);
  -webkit-box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.75);

  & .result-header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }
  & .result-body {
    display: flex;
    flex-wrap: wrap;
    align-items: center;

    & .corpName {
      margin-right: 30px;
    }
  }
  & .result-footer {
    & .more-info {
      background: #87A4DD;
      border: 1px solid #CBC8C8;
      color: #ffffff;
      font-weight: bold;
      font-size: 14px;
    }
  }
}

